--- a/style.css
+++ b/style.css
@@ -120,8 +120,41 @@ input[type="submit"]:active {
     background-position:top center;
 }
 
-/*Index.php*/
+#dialogCon {
+    z-index:999990;
+    position:fixed;
+    background-color: rgba(0,0,0,0.8);
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    display: none;
+}
 
+.dialog {
+    border-radius: 10px 10px 10px 10px;
+    background-color:#fff;
+    z-index:999991;
+    margin-left: auto;
+    margin-right: auto;
+    height:auto;
+    margin-top: 100px;
+    padding: 20px;
+}
+
+#closeButton {
+    width:30px;
+    height:30px;
+    background:url('images/icons/close.png') no-repeat top;
+    cursor:pointer;
+    float: left;
+}
+
+#closeButton:hover {
+    background-position: bottom;
+}
+
+/*Index.php*/
 /*Top*/
 #headerCon {
     background-image:url('images/topBg.jpg');
@@ -528,7 +561,7 @@ header {
     text-align:center;
     border:none;
     color:#21201d;
-    border:none;
+    cursor: pointer;
 }
 
 #sampleLettersCon #addLetterCon:hover {
@@ -542,6 +575,10 @@ header {
 
 #sampleLettersCon #addLetter {
     padding:20px 20px 15px 20px;
+}
+
+#addLetterForm {
+    width: 355px;
 }
 
 #sampleLettersCon .letter p {
